fixed text align on mobile

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -44,7 +44,7 @@
       flex-direction: column;
 
       @include respond(tab-port-sm) {
-        align-items: center;
+        align-items: left;
       }
 
       &-text {
@@ -54,7 +54,7 @@
           text-align: left;
         }
         @include respond(tab-port-sm) {
-          text-align: center;
+          text-align: left;
         }
 
         &--important {
